2008-04-27	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/tool_button.h:
	* ima/src/tool_button.cpp:
	fixed tooltip flicker issue

	* ima/dialogs/config.ui:
	* ima/src/config_widget.h:
	* ima/src/config_widget.cpp:
	* ima/src/classroom_manager.cpp:
	* ima/src/tool_button.h:
	* ima/src/tool_button.cpp:
	added option for making toolbar buttons only display icon

	* ima/src/client.h:
	* ima/src/main_window.cpp:
	* ima/src/client.cpp:
	better shutdown on exit - hopefully fixes threading-problems

	* ima/src/main_window.cpp:
	fixed endless loop when initializing keys

2008-04-23	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/ivs.cpp:
	* ica/src/isd_server.cpp:
	* lib/include/isd_base.h:
	* lib/src/isd_base.cpp:
	* ica/win32/win32vnc.cpp:
	- renamed SocketGetIPBoundTo to SocketGetPeerAddress
	- fixed demo-mode on Linux-clients by not adding host-names twice
	  because of isdForwarder

	* lib/src/local_system.cpp:
	added patch by Ben Dailey <bdailey/at/bhmsd/dot/k12/dot/in/dot/us>
	which adds dates and times to logfiles

2008-04-21	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	* README:
	made 1.0.8 release

2008-04-21	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ica/resources/it.ts:
	* ima/resources/it.qm:
	* ima/resources/it.ts:
	* lib/resources/it.ts:
	refreshed Italian localization

2008-04-17	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/isd_server.cpp:
	cleanups

	* lib/src/isd_connection.cpp:
	do not load key-file from empty filename

	* lib/include/isd_connection.h:
	* lib/src/isd_connection.cpp:
	added gracefulClose() which should be used whereever possible as this
	gracefully closes the connection instead of aborting it - avoids
	SIGPIPE-signals

	* ica/src/demo_server.h:
	* ica/src/demo_server.cpp:
	* ica/src/isd_server.cpp:
	* ica/src/isd_server.h:
	* ima/src/main_window.cpp:
	* lib/include/isd_connection.h:
	* lib/include/isd_base.h: